--- a/Content/Sage/HTML/Common/page_header_nav_content.html
+++ b/Content/Sage/HTML/Common/page_header_nav_content.html
@@ -22,8 +22,14 @@
         </div>
         <div class="col-md-5 col-sm-4 col-xs-4">
             <ul class="nav nav-pills-sage pull-right header-right">
+                <li role="presentation" class="hidden-xs hidden-sm">
+                    <a href="#">Sage for life</a>
+                </li>
                 <li role="presentation">
-                    <a href="#"><i class="fa fa-search fa-lg" aria-hidden="true"></i><span class="sr-only">Search</span></a>
+                    <a href="#">Search <i class="fa fa-search fa-lg" aria-hidden="true"></i></a>
+                </li>
+                <li role="presentation" class="hidden-xs hidden-sm">
+                    <a href="#">Sign in <i class="fa fa-user-circle-o fa-lg" aria-hidden="true"></i></a>
                 </li>
             </ul>
         </div>
