--- a/Source/HTML/Common/page_side_nav_content.html
+++ b/Source/HTML/Common/page_side_nav_content.html
@@ -24,6 +24,16 @@
                data-toggleCssTarget="#category_nav,#category_section">Category <span class="chevron-right"></span></a>
             <ul class="list-unstyled" id="category_nav">
                 <li>
+                    <a href="/Content/Sage/HTML/Pages/Accounting/index.html">Accounting</a>
+                </li>
+                <li>
+                    <a href="#">BMS (ERM)</a>
+                </li>
+                <li>
+                    <a href="#">HMC & Payroll</a>
+                </li>
+                <li>
+                    <a href="#">Payments</a>
                 </li>
             </ul>
         </li>
@@ -64,10 +74,10 @@
                     <a href="/Content/Sage/HTML/Pages/Products/sage_x3/index.html">Sage X3</a>
                 </li>
                 <li>
-                    <a href="">SPS Payments</a>
+                    <a href="#">SPS Payments</a>
                 </li>
                 <li>
-                    <a href="">Sage Payroll</a>
+                    <a href="#">Sage Payroll</a>
                 </li>
             </ul>
         </li>
