Side nav changes

--- a/Source/HTML/Common/page_side_nav_content.html
+++ b/Source/HTML/Common/page_side_nav_content.html
@@ -1,11 +1,12 @@
 ﻿<div class="drawer">
+    <div id="side_nav_header">
+        <a class="navbar-close" href="#" data-toggleCssClass="navOpen" data-toggleCssTarget="#page_main,#side_nav">
+            <img width="24" height="24" src="/Content/Sage/Images/sample_content_images/icon_close_white.svg"/>
+        </a>
+        <a class="navbar-sage-brand" href="/"></a>
+    </div>
+
     <ul class="list-unstyled">
-        <li>
-            <a class="navbar-close" href="#" data-toggleCssClass="navOpen" data-toggleCssTarget="#page_main,#side_nav">
-                <img width="24" height="24" src="/Content/Sage/Images/sample_content_images/icon_close_white.svg"/>
-            </a>
-            <a class="navbar-sage-brand" href="/"></a>
-        </li>
         <li>
             <a href="#">Explore Sage</a>
         </li>
@@ -82,4 +83,31 @@
             </ul>
         </li>
     </ul>
+    <ul class="list-unstyled secondary-nav">
+        <li>
+            <a href="#">About Sage</a>
+        </li>
+        <li>
+            <a href="#">Contact Sage</a>
+        </li>
+        <li>
+            <a href="#">Our Blog</a>
+        </li>
+        <li>
+            <a href="#">Events</a>
+        </li>
+    </ul>
+
+    <div id="side_nav_footer">
+        <div>
+            <a href="#"><i class="fa fa-google-plus fa-lg" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-youtube fa-lg" aria-hidden="true"></i></a>
+        </div>
+        <div class="copyright">
+            &copy; Sage Accounting 2007
+        </div>
+    </div>
 </div>
