--- a/Content/Sage/HTML/Common/page_header_nav_content.html
+++ b/Content/Sage/HTML/Common/page_header_nav_content.html
@@ -25,14 +25,13 @@
                 <li role="presentation" class="hidden-xs hidden-sm">
                     <a href="#">Sage for life</a>
                 </li>
-                <li role="presentation">
+                <li role="presentation" class="hidden-xs hidden-sm">
                     <a href="#">Search <i class="fa fa-search fa-lg" aria-hidden="true"></i></a>
                 </li>
-                <li role="presentation" class="hidden-xs hidden-sm">
-                    <a href="#">Sign in <i class="fa fa-user-circle-o fa-lg" aria-hidden="true"></i></a>
+                <li role="presentation">
+                    <a href="#"><span class="hidden-xs">Sign in</span> <i class="fa fa-user-circle-o fa-lg" aria-hidden="true"></i></a>
                 </li>
             </ul>
         </div>
-     
     </div>
 </div>
