--- a/Content/Sage/HTML/Common/page_side_nav_content.html
+++ b/Content/Sage/HTML/Common/page_side_nav_content.html
@@ -1,113 +1,156 @@
-<div class="drawer">
-    <div id="side_nav_header">
-        <a class="navbar-close" href="#" data-toggleCssClass="navOpen" data-toggleCssTarget="#page_main,#side_nav">
-            <img width="24" height="24" src="/Content/Sage/Images/sample_content_images/icon_close_white.svg"/>
-        </a>
-        <a class="navbar-sage-brand" href="/"></a>
+<div id="ux2_side_nav_content">
+    <div class="container-fluid with-max-width header">
+        <div class="col-xs-2 col-md-4">
+            <a class="navbar-close" href="#" data-toggleCssClass="navOpen" data-toggleCssTarget="#page_main,#side_nav">
+                <img width="24" height="24" src="/Content/Sage/Images/sample_content_images/icon_close_white.svg"/>
+            </a>
+        </div>
+
+        <div class="col-xs-8 col-md-4">
+            <a class="navbar-sage-brand" href="/"></a>
+        </div>
+
+        <div class="col-xs-2 col-md-4">
+            <ul class="section list-unstyled">
+                <li>
+                    <a href="#">Search <i class="fa fa-search fa-lg" aria-hidden="true"></i></a>
+                </li>
+                <li>
+                    <a href="#">Sign in <i class="fa fa-user-circle-o fa-lg" aria-hidden="true"></i></a>
+                </li>
+            </ul>
+        </div>
     </div>
 
-    <ul class="list-unstyled">
-        <li>
-            <a href="#">Explore Sage</a>
-        </li>
-        <li>
-            <a href="#">Accountants</a>
-        </li>
-        <li>
-            <a href="/Content/Sage/HTML/Pages/Partners/index.html">Partners</a>
-        </li>
-        <li>
-            <a href="#">Sage for life</a>
-        </li>
-
-        <li class="inner-level sub-section">
-            <a href="#" id="category_section" data-toggleCssClass="active"
-               data-toggleCssTarget="#category_nav,#category_section">Category <span class="chevron-right"></span></a>
-            <ul class="list-unstyled" id="category_nav">
+    <div class="container body">
+        <div class="top">
+            <ul>
                 <li>
-                    <a href="/Content/Sage/HTML/Pages/Accounting/index.html">Accounting</a>
+                    <a href="#">Explore Sage</a>
                 </li>
                 <li>
-                    <a href="#">BMS (ERM)</a>
+                    <a href="#">Accountants</a>
                 </li>
                 <li>
-                    <a href="#">HMC & Payroll</a>
+                    <a href="#">Partners</a>
                 </li>
                 <li>
-                    <a href="#">Payments</a>
+                    <a href="#">Sage for life</a>
                 </li>
             </ul>
-        </li>
-
-        <li class="inner-level sub-section">
-            <a href="#" id="industry_section" data-toggleCssClass="active"
-               data-toggleCssTarget="#industry_nav,#industry_section">Industry <span class="chevron-right"></span></a>
-            <ul class="list-unstyled" id="industry_nav">
-                <li>
-                </li>
-            </ul>
-        </li>
-
-        <li class="inner-level sub-section">
-            <a href="#" id="segment_section" data-toggleCssClass="active"
-               data-toggleCssTarget="#segment_nav,#segment_section">Segment <span class="chevron-right"></span></a>
-            <ul class="list-unstyled" id="segment_nav">
-                <li>
-                </li>
-            </ul>
-        </li>
-
-        <li class="inner-level sub-section">
-            <a href="#" id="product_section" data-toggleCssClass="active"
-               data-toggleCssTarget="#product_nav,#product_section,#contact">Products <span
-                    class="chevron-right"></span></a>
-            <ul class="list-unstyled" id="product_nav">
-                <li>
-                    <a href="/Content/Sage/HTML/Pages/Products/sage_one/index.html">Sage One</a>
-                </li>
-                <li>
-                    <a href="/Content/Sage/HTML/Pages/Products/sage_live/index.html">Sage Live</a>
-                </li>
-                <li>
-                    <a href="/Content/Sage/HTML/Pages/Products/sage_50c/index.html">Sage 50c</a>
-                </li>
-                <li>
-                    <a href="/Content/Sage/HTML/Pages/Products/sage_x3/index.html">Sage X3</a>
-                </li>
-                <li>
-                    <a href="#">SPS Payments</a>
-                </li>
-                <li>
-                    <a href="#">Sage Payroll</a>
-                </li>
-            </ul>
-        </li>
-    </ul>
-    <ul class="list-unstyled secondary-nav">
-        <li>
-            <a href="#">About Sage</a>
-        </li>
-        <li>
-            <a href="#">Contact Sage</a>
-        </li>
-        <li>
-            <a href="#">Our Blog</a>
-        </li>
-        <li>
-            <a href="#">Events</a>
-        </li>
-    </ul>
-
-    <div id="side_nav_footer">
-        <div>
-            <a href="#"><i class="fa fa-google-plus fa-lg" aria-hidden="true"></i></a>
-            <a href="#"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
-            <a href="#"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
-            <a href="#"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
-            <a href="#"><i class="fa fa-youtube fa-lg" aria-hidden="true"></i></a>
         </div>
-        <div class="copyright">
-            &copy; Sage Accounting 2007
+        <div class="col-sm-12 col-md-9 main">
+            <div class="section">
+                <a class="section-header"><span class="chevron-right"></span>Products</a>
+                <ul>
+                    <li>
+                        <a href="/Content/Sage/HTML/Pages/Products/sage_one/index.html">Sage One</a>
+                    </li>
+                    <li>
+                        <a href="/Content/Sage/HTML/Pages/Products/sage_live/index.html">Sage Live</a>
+                    </li>
+                    <li>
+                        <a href="/Content/Sage/HTML/Pages/Products/sage_50c/index.html">Sage 50c</a>
+                    </li>
+                    <li>
+                        <a href="/Content/Sage/HTML/Pages/Products/sage_x3/index.html">Sage X3</a>
+                    </li>
+                    <li>
+                        <a href="#">SPS Payments</a>
+                    </li>
+                    <li>
+                        <a href="#">Sage Payroll</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="section">
+                <a class="section-header"><span class="chevron-right"></span>Business area</a>
+                <ul>
+                    <li>
+                        <a href="/Content/Sage/HTML/Pages/Accounting/index.html">Accounting</a>
+                    </li>
+                    <li>
+                        <a href="#">Payments</a>
+                    </li>
+                    <li>
+                        <a href="#">HMC &amp; Payroll</a>
+                    </li>
+                    <li>
+                        <a href="#">Business management</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="section">
+                <a class="section-header"><span class="chevron-right"></span>Industry</a>
+                <ul>
+                    <li>
+                        <a href="#">Chemicals</a>
+                    </li>
+                    <li>
+                        <a href="#">Churches</a>
+                    </li>
+                    <li>
+                        <a href="#">Construction</a>
+                    </li>
+                    <li>
+                        <a href="#">Food &amp; beverage</a>
+                    </li>
+                    <li>
+                        <a href="#">Manufacturing</a>
+                    </li>
+                    <li>
+                        <a href="#">Real Estate</a>
+                    </li>
+                    <li>
+                        <a href="#">Wholesale distribution</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="section">
+                <a class="section-header"><span class="chevron-right"></span>Growth stage</a>
+                <ul>
+                    <li>
+                        <a href="#">Startup</a>
+                    </li>
+                    <li>
+                        <a href="/Content/Sage/HTML/Pages/Small_business/index.html">Small business</a>
+                    </li>
+                    <li>
+                        <a href="/Content/Sage/HTML/Pages/growing_business/index.html">Growing business</a>
+                    </li>
+                    <li>
+                        <a href="/Content/Sage/HTML/Pages/Enterprise/index.html">Enterprise</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-3 social">
+            <ul>
+                <li>
+                    <a href="#">About Sage</a>
+                </li>
+                <li>
+                    <a href="#">Contact Sage</a>
+                </li>
+                <li>
+                    <a href="#">Our Blog</a>
+                </li>
+                <li>
+                    <a href="#">Events</a>
+                </li>
+            </ul>
+
+            <div>
+                <a href="#"><i class="fa fa-google-plus fa-lg" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-youtube fa-lg" aria-hidden="true"></i></a>
+            </div>
+
+            <div class="copyright">
+                &copy; Sage Accounting 2017
+            </div>
         </div>
     </div>
 </div>
