--- a/Source/HTML/Pages/Products/sage_one/index.html
+++ b/Source/HTML/Pages/Products/sage_one/index.html
@@ -42,15 +42,11 @@
                 height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
+
     <!--Start Side Page Navigation-->
-    <div id="side_nav">
-        <nav id="page_side_nav">
-            <div id="page_side_nav_content" ng-include="'../../../common/page_side_nav_content.html'">
-                <!--Will be sitecore placeholder-->
-            </div>
-        </nav>
-    </div>
+    <nav id="ux2_side_nav" ng-include="'../../../common/page_side_nav_content.html'"></nav>
     <!--End Side Page Navigation-->
+
     <div id="page_main">
         <nav id="page_header_nav" class="navbar navbar-sage">
             <div id="page_header_nav_content" ng-include="'../../../common/page_header_nav_content.html'">
