--- a/Source/HTML/Common/page_side_nav_content.html
+++ b/Source/HTML/Common/page_side_nav_content.html
@@ -41,7 +41,7 @@
         </div>
         <div class="col-sm-12 col-md-9 main">
             <div class="section">
-                <a class="section-header"><span class="chevron-right"></span>Products</a>
+                <a class="section-header">Products</a>
                 <ul>
                     <li>
                         <a href="/Content/Sage/HTML/Pages/Products/sage_one/index.html">Sage One</a>
@@ -64,7 +64,7 @@
                 </ul>
             </div>
             <div class="section">
-                <a class="section-header"><span class="chevron-right"></span>Business area</a>
+                <a class="section-header">Business area</a>
                 <ul>
                     <li>
                         <a href="/Content/Sage/HTML/Pages/Accounting/index.html">Accounting</a>
@@ -81,7 +81,7 @@
                 </ul>
             </div>
             <div class="section">
-                <a class="section-header"><span class="chevron-right"></span>Industry</a>
+                <a class="section-header">Industry</a>
                 <ul>
                     <li>
                         <a href="#">Chemicals</a>
@@ -107,7 +107,7 @@
                 </ul>
             </div>
             <div class="section">
-                <a class="section-header"><span class="chevron-right"></span>Growth stage</a>
+                <a class="section-header">Growth stage</a>
                 <ul>
                     <li>
                         <a href="#">Startup</a>
