--- a/Source/HTML/Pages/Products/sage_one/index.html
+++ b/Source/HTML/Pages/Products/sage_one/index.html
@@ -70,6 +70,9 @@
         <!--Start Page Content-->
         <div id="page_section_content">
             <!--pageSectionContent-->
+            <div ng-include="'./content_widgets/ux2_page_section_row_content.html'">
+                <!--Will be sitecore placeholder-->
+            </div>
             <div ng-include="'./content_widgets/page_section_row_1_content.html'">
                 <!--Will be sitecore placeholder-->
             </div>
