Side nav changes

--- a/Content/Sage/HTML/Common/page_side_nav_content.html
+++ b/Content/Sage/HTML/Common/page_side_nav_content.html
@@ -23,6 +23,7 @@
     </div>
 
     <div class="container body">
+        <div class="row">
         <div class="top">
             <ul>
                 <li>
@@ -151,6 +152,7 @@
             <div class="copyright">
                 &copy; Sage Accounting 2017
             </div>
+        </div>
         </div>
     </div>
 </div>
