--- a/Content/Sage/HTML/Pages/Accounting/content_widgets/content_widget_product_filter_module.html
+++ b/Content/Sage/HTML/Pages/Accounting/content_widgets/content_widget_product_filter_module.html
@@ -203,7 +203,7 @@
                                 <div class="remove">Remove</div>
                             </div>
                         </div>
-                        <div class="product-panel" data-mob-prod-id="sage_live" data-filter-product-score="0" data-filter-attributes="option-5|option-6">
+                        <div class="product-panel" data-mob-prod-id="sage_live" data-filter-product-score="0" data-filter-attributes="option-1|option-2|option-3|option-4|option-5|option-6">
                             <div class="panel panel-default">
                                 <div class="panel-pre-heading"></div>
                                 <div class="panel-heading">
