--- a/Source/HTML/Pages/Home/content_widgets/content_widget_generic_tabs.html
+++ b/Source/HTML/Pages/Home/content_widgets/content_widget_generic_tabs.html
@@ -1,4 +1,4 @@
-﻿<div class="content-widget tab-control-new text-center brand-light-green-AA-fg">
+﻿<div class="content-widget tab-control-new text-center">
     <div class="content-widget-inner ">
         <div class="wrapper">
             <!--<div class="header brand-black-fg">
