--- a/Source/HTML/Pages/Home/content_widgets/content_widget_two_col_generic_content.html
+++ b/Source/HTML/Pages/Home/content_widgets/content_widget_two_col_generic_content.html
@@ -23,7 +23,7 @@
     </div>
 </div>-->
 <!--Example two-->
-<div class="content-widget two-col-generic-content with-back-image brand-lightest-grey-bg">
+<div class="content-widget two-col-generic-content with-back-image brand-white-fg ux2-slate-light-bg">
     <div class="content-widget-inner">
         <div class="wrapper">
             <div class="row indent row-eq-height xs-flex-block">
@@ -38,10 +38,10 @@
                 <div class="col-md-6 col-sm-6 xs-flex-block row-eq-height-middle">
                     <div class="footer">
                         <p>
-                            <a href="/Content/Sage/HTML/Pages/Partners/index.html" class="button-black-block">How to partner with Sage</a>
+                            <a href="/Content/Sage/HTML/Pages/Partners/index.html" class="button-white-block">How to partner with Sage</a>
                         </p>
                         <p>
-                            <a href="#" class="button-black-block">I'm an existing partner</a>
+                            <a href="#" class="button-white-block">I'm an existing partner</a>
                         </p>
                     </div>
                 </div>
