--- a/Source/HTML/Common/page_header_nav_content.html
+++ b/Source/HTML/Common/page_header_nav_content.html
@@ -7,7 +7,7 @@
                     <a href="#" data-toggleCssClass="navOpen" data-toggleCssTarget="#page_main,#side_nav"><i class="fa fa-bars fa-lg" aria-hidden="true"></i><span class="sr-only">Menu</span></a>
                 </li>
                 <li role="presentation" class="hidden-xs hidden-sm">
-                    <a href="#">Explore Sage</a>
+                    <a href="/Content/Sage/HTML/Pages/Explore/index.html">Explore Sage</a>
                 </li>
 				<li role="presentation" class="hidden-xs hidden-sm">
                     <a href="#">Accountants</a>
