--- a/Source/HTML/Common/page_side_nav_content.html
+++ b/Source/HTML/Common/page_side_nav_content.html
@@ -27,7 +27,7 @@
         <div class="top">
             <ul>
                 <li>
-                    <a href="#">Explore Sage</a>
+                    <a href="/Content/Sage/HTML/Pages/Explore/index.html">Explore Sage</a>
                 </li>
                 <li>
                     <a href="#">Accountants</a>
