--- a/Source/HTML/Pages/Explore/content_widgets/page_content.html
+++ b/Source/HTML/Pages/Explore/content_widgets/page_content.html
@@ -86,43 +86,83 @@
                                 </div>
 
                                 <div class="row">
-                                    <div class="col-md-1"></div>
-                                    <div class="col-md-2">
+                                    <div class="col-sm-1"></div>
+                                    <div class="col-sm-2">
                                         <a href="#">
                                             <img src="/Content/Sage/Images/sample_content_images/icon_distribution.svg"
                                                  alt=""/>
                                             Distribution
                                         </a>
                                     </div>
-                                    <div class="col-md-2">
+                                    <div class="col-sm-2">
                                         <a href="#">
                                             <img src="/Content/Sage/Images/sample_content_images/icon_manufacturing.svg"
                                                  alt=""/>
                                             Manufacturing
                                         </a>
                                     </div>
-                                    <div class="col-md-2">
+                                    <div class="col-sm-2">
                                         <a href="#">
                                             <img src="/Content/Sage/Images/sample_content_images/icon_process.svg"
                                                  alt=""/>
                                             Process Manufacturing
                                         </a>
                                     </div>
-                                    <div class="col-md-2">
+                                    <div class="col-sm-2">
                                         <a href="#">
                                             <img src="/Content/Sage/Images/sample_content_images/icon_services.svg"
                                                  alt=""/>
                                             Services
                                         </a>
                                     </div>
-                                    <div class="col-md-2">
+                                    <div class="col-sm-2">
                                         <a href="#">
                                             <img src="/Content/Sage/Images/sample_content_images/icon_services.svg"
                                                  alt=""/>
                                             Religious organizations
                                         </a>
                                     </div>
-                                    <div class="col-md-1"></div>
+                                    <div class="col-sm-1"></div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-sm-1"></div>
+                                    <div class="col-sm-2">
+                                        <a href="#">
+                                            <img src="/Content/Sage/Images/sample_content_images/icon_distribution.svg"
+                                                 alt=""/>
+                                            Distribution
+                                        </a>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <a href="#">
+                                            <img src="/Content/Sage/Images/sample_content_images/icon_manufacturing.svg"
+                                                 alt=""/>
+                                            Manufacturing
+                                        </a>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <a href="#">
+                                            <img src="/Content/Sage/Images/sample_content_images/icon_process.svg"
+                                                 alt=""/>
+                                            Process Manufacturing
+                                        </a>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <a href="#">
+                                            <img src="/Content/Sage/Images/sample_content_images/icon_services.svg"
+                                                 alt=""/>
+                                            Services
+                                        </a>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <a href="#">
+                                            <img src="/Content/Sage/Images/sample_content_images/icon_services.svg"
+                                                 alt=""/>
+                                            Religious organizations
+                                        </a>
+                                    </div>
+                                    <div class="col-sm-1"></div>
                                 </div>
                             </div>
                         </div>
