Changes to accounting page widget ordering

--- a/Source/HTML/Pages/Accounting/index.html
+++ b/Source/HTML/Pages/Accounting/index.html
@@ -70,16 +70,16 @@
         <!--Start Page Content-->
         <section id="page_section">
             <div id="page_section_content">
+                <div ng-include="'./content_widgets/page_section_row_3_content.html'">
+                    <!--Will be sitecore placeholder-->
+                </div>
                 <!--pageSectionContent-->
                 <div ng-include="'./content_widgets/page_section_row_1_content.html'">
                     <!--Will be sitecore placeholder-->
                 </div>
-                <div ng-include="'./content_widgets/page_section_row_2_content.html'">
-                    <!--Will be sitecore placeholder-->
-                </div>
-                <div ng-include="'./content_widgets/page_section_row_3_content.html'">
-                    <!--Will be sitecore placeholder-->
-                </div>
+                <!--<div ng-include="'./content_widgets/page_section_row_2_content.html'">-->
+                    <!--&lt;!&ndash;Will be sitecore placeholder&ndash;&gt;-->
+                <!--</div>-->
                 <div ng-include="'./content_widgets/page_section_row_4_content.html'">
                     <!--Will be sitecore placeholder-->
                 </div>
