--- a/Source/HTML/Pages/Home/content_widgets/content_widget_hero_banner_tabs.html
+++ b/Source/HTML/Pages/Home/content_widgets/content_widget_hero_banner_tabs.html
@@ -4,7 +4,7 @@
         <div class="col-md-12">
             <div class="content-widget hero-banner hero-tabs">
                 <div class="hero-banner-content">
-                    <div id="hero_banner_tab_carousel" class="carousel fade" data-ride="carousel">
+                    <div id="hero_banner_tab_carousel" class="carousel fade">
                         <ol class="carousel-indicators">
                             <li data-target="#hero_banner_tab_carousel" data-slide-to="0" class="active">Easy accounting software</li>
                             <li data-target="#hero_banner_tab_carousel" data-slide-to="1">Real-time cloud accounting</li>
