Implementing free trial landing page

--- a/Source/HTML/Pages/Explore/content_widgets/page_content.html
+++ b/Source/HTML/Pages/Explore/content_widgets/page_content.html
@@ -22,28 +22,28 @@
                                 </div>
 
                                 <div class="row">
-                                    <div class="col-sm-6 col-md-3">
+                                    <div class="col-xxs-12 col-xs-6 col-md-3">
                                         <a href="#">
                                             <img src="/Content/Sage/Images/sample_content_images/icon_accounting.svg"
                                                  alt=""/>
                                             Accounting
                                         </a>
                                     </div>
-                                    <div class="col-sm-6 col-md-3">
+                                    <div class="col-xxs-12 col-xs-6 col-md-3">
                                         <a href="#">
                                             <img src="/Content/Sage/Images/sample_content_images/icon_payments.svg"
                                                  alt=""/>
                                             Payments
                                         </a>
                                     </div>
-                                    <div class="col-sm-6 col-md-3">
+                                    <div class="col-xxs-12 col-xs-6 col-md-3">
                                         <a href="#">
                                             <img src="/Content/Sage/Images/sample_content_images/icon_payroll.svg"
                                                  alt=""/>
                                             HR &amp; Payroll
                                         </a>
                                     </div>
-                                    <div class="col-sm-6 col-md-3">
+                                    <div class="col-xxs-12 col-xs-6 col-md-3">
                                         <a href="#">
                                             <img src="/Content/Sage/Images/sample_content_images/icon_management.svg"
                                                  alt=""/>
