--- a/Source/HTML/Pages/Free_trial/content_widgets/index_page_content.html
+++ b/Source/HTML/Pages/Free_trial/content_widgets/index_page_content.html
@@ -10,29 +10,48 @@
                                 <p>Discover the joy of simple, effortless accounting today</p>
                             </div>
 
-                            <form class="request-form" data-toggle="validator" role="form" id="myForm">
-                                <div class="row">
-                                    <label class="col-sm-6">
-                                        First name
-                                        <input type="text" name="firstname"/>
-                                    </label>
+                            <form data-toggle="validator" role="form" class="row">
+                                <div class="col-lg-2"></div>
 
-                                    <label class="col-sm-6">
-                                        Last name
-                                        <input type="text" name="lastname"/>
-                                    </label>
-                                </div>
+                                <div class="col-lg-8">
+                                    <div class="row">
+                                        <label class="col-sm-6">
+                                            First name
+                                            <input type="text" name="firstname"/>
+                                        </label>
 
-                                <div class="row">
-                                    <label class="col-xxs-12">
-                                        Email
-                                        <input type="text" name="email"/>
-                                    </label>
-                                </div>
+                                        <label class="col-sm-6">
+                                            Last name
+                                            <input type="text" name="lastname"/>
+                                        </label>
+                                    </div>
 
-                                <div class="col-sm-6 margin-bottom-md">
-                                    <button type="submit" class="button-pink-solid-block-invert">Submit</button>
+                                    <div class="row">
+                                        <label class="col-xxs-12">
+                                            Email
+                                            <input type="text" name="email"/>
+                                        </label>
+                                    </div>
+
+                                    <div class="row">
+                                        <label class="col-xxs-12">
+                                            <input type="checkbox" name="tandc"/>
+                                            <i></i>
+                                            I have read and agree with the <a href="#">Terms and Conditions</a>
+                                        </label>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <button type="submit" class="button-pink-block">Create my Sage account</button>
+                                        </div>
+
+                                        <div class="col-sm-6 pre-existing">
+                                            <a href="#">Already have a Sage account?</a>
+                                        </div>
+                                    </div>
                                 </div>
+                                <div class="col-lg-2"></div>
                             </form>
                         </div>
                     </div>
