Minot text tweaks

--- a/Source/HTML/Pages/Accounting/content_widgets/content_widget_product_filter_module.html
+++ b/Source/HTML/Pages/Accounting/content_widgets/content_widget_product_filter_module.html
@@ -92,7 +92,7 @@
                 <div class="filter-module-feature-compare-text indent-top-xs">
                     <div class="row">
                         <div class="col-md-12 text-center">
-                            <p class="filter-text-first">Select up to 3 software products for a detailed comparison below</p>
+                            <p class="filter-text-first">Discover more aboout an accounting solution, and compare the solutions below</p>
                             <p class="filter-text-one-match hidden">We've highlighted the Sage solutions that best fit your needs</p>
                             <p class="filter-text-more-matches hidden">We've highlighted the Sage solutions that best fit your needs</p>
                             <p class="filter-text-no-match hidden">Here's the closest match. Select fewer features for an exact recommendation</p>
