--- a/Source/HTML/Pages/Accounting/content_widgets/content_widget_generic_content_hero_1.html
+++ b/Source/HTML/Pages/Accounting/content_widgets/content_widget_generic_content_hero_1.html
@@ -8,7 +8,7 @@
                 <div class="section">
                     <p>It's time to take away the headache of managing everyday financials and help your business to grow faster.</p>
                 </div>
-                <div class="footer">
+                <div class="footer" style="display:none">
                     <a href="#phoneFan" class="button-green-solid-invert">Discover more</a>
                 </div>
             </div>
