Adding trial flow pages

--- a/Source/HTML/Pages/Free_trial/content_widgets/already_have_account_page_content.html
+++ b/Source/HTML/Pages/Free_trial/content_widgets/already_have_account_page_content.html
@@ -6,30 +6,25 @@
                     <div class="content-widget-inner">
                         <div class="wrapper">
                             <div class="header text-center">
-                                <h1 class="h1">Start your Sage One Trial</h1>
-                                <p>Discover the joy of simple, effortless accounting today</p>
+                                <h1 class="h1">Start your trial with your Sage account</h1>
+                                <p>Find out for yourself how Sage One takes care of your finances</p>
                             </div>
 
-                            <form action="/Content/Sage/HTML/Pages/Free_trial/last_step.html" data-toggle="validator" role="form" class="container-fluid">
-                                <div class="col-lg-2"></div>
+                            <form data-toggle="validator" role="form" class="container-fluid">
+                                <div class="col-md-3"></div>
 
-                                <div class="col-lg-8">
+                                <div class="col-md-6">
                                     <div class="row">
-                                        <label class="col-sm-6">
-                                            First name
-                                            <input type="text" name="firstname"/>
-                                        </label>
-
-                                        <label class="col-sm-6">
-                                            Last name
-                                            <input type="text" name="lastname"/>
+                                        <label class="col-xxs-12">
+                                            Email
+                                            <input type="text" name="email"/>
                                         </label>
                                     </div>
 
                                     <div class="row">
                                         <label class="col-xxs-12">
-                                            Email
-                                            <input type="text" name="email"/>
+                                            Password
+                                            <input type="password" name="password"/>
                                         </label>
                                     </div>
 
@@ -43,15 +38,15 @@
 
                                     <div class="row">
                                         <div class="col-sm-6">
-                                            <button type="submit" class="button-pink-block">Create my Sage account</button>
+                                            <button type="submit" class="button-pink-block">Start your trial</button>
                                         </div>
 
                                         <div class="col-sm-6 pre-existing">
-                                            <a href="/Content/Sage/HTML/Pages/Free_trial/already_have_account.html">Already have a Sage account?</a>
+                                            <a href="#">I forgot my password</a>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-2"></div>
+                                <div class="col-md-3"></div>
                             </form>
                         </div>
                     </div>
