Added sticky header to sage one page + supporting JS

--- a/Source/HTML/Pages/Accounting/content_widgets/content_widget_product_filter_module.html
+++ b/Source/HTML/Pages/Accounting/content_widgets/content_widget_product_filter_module.html
@@ -107,7 +107,7 @@
                                 <div class="panel-heading">
                                     <div class="row">
                                         <div class="col-md-12">
-                                            <p class="h1">Sage One</p>
+                                            <p class="h1">Sage One Start</p>
                                             <p>Simple and secure online accounting with no fixed-term contract</p>
                                         </div>
                                     </div>
@@ -137,7 +137,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-md-12 indent-bottom">
-                                            <a href="/Content/Sage/HTML/Pages/Products/sage_one/index.html" class="button-learnmore">Learn more</a>
+                                            <a href="/Content/Sage/HTML/Pages/Products/sage_one/index.html" class="button-learnmore" data-sticky-header-trigger="SageOneStart">Learn more</a>
                                         </div>
                                     </div>
                                     <div class="product-select-icon">
@@ -158,7 +158,7 @@
                                 <div class="panel-heading">
                                     <div class="row">
                                         <div class="col-md-12">
-                                            <p class="h1">Sage One Plus</p>
+                                            <p class="h1">Sage One</p>
                                             <p>Simple and secure online accounting for your growing company</p>
                                         </div>
                                     </div>
