--- a/Source/HTML/Pages/Products/sage_one/index.html
+++ b/Source/HTML/Pages/Products/sage_one/index.html
@@ -43,6 +43,8 @@
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
 
+    <div ng-include="'./content_widgets/content_widget_sticky_header.html'"></div>
+
     <!--Start Side Page Navigation-->
     <nav id="ux2_side_nav" ng-include="'../../../common/page_side_nav_content.html'"></nav>
     <!--End Side Page Navigation-->
