--- a/Source/HTML/Pages/Products/sage_one/content_widgets/content_widget_sticky_header.html
+++ b/Source/HTML/Pages/Products/sage_one/content_widgets/content_widget_sticky_header.html
@@ -4,8 +4,8 @@
             <div class="row">
                 <div class="col-sm-5 title">Sage One Start - $6.99 a month</div>
                 <div class="col-sm-7 buttons">
-                    <button class="button-pink-block">Start trial</button>
-                    <button class="button-pink-block inverse">Buy now</button>
+                    <a href="/Content/Sage/HTML/Pages/Free_trial/index.html" class="button-pink-block">Start trial</a>
+                    <a href="/Content/Sage/HTML/Pages/Buy_now/index.html" class="button-pink-block inverse">Buy now</a>
                 </div>
             </div>
         </div>
