--- a/Source/HTML/Pages/Explore/content_widgets/page_content.html
+++ b/Source/HTML/Pages/Explore/content_widgets/page_content.html
@@ -23,7 +23,7 @@
 
                                 <div class="row">
                                     <div class="col-xxs-12 col-xs-6 col-md-3">
-                                        <a href="#">
+                                        <a href="/Content/Sage/HTML/Pages/Accounting/index.html">
                                             <img src="/Content/Sage/Images/sample_content_images/icon_accounting.svg"
                                                  alt=""/>
                                             Accounting
@@ -68,7 +68,7 @@
                                     </div>
 
                                     <div class="col-md-4">
-                                        <a href="#" class="button-black-block">Wanting to grow</a>
+                                        <a href="/Content/Sage/HTML/Pages/growing_business/index.html" class="button-black-block">Wanting to grow</a>
                                     </div>
 
                                     <div class="col-md-4">
