Adding autoclose for sticky header

--- a/Source/HTML/Pages/Products/sage_one/content_widgets/ux2_content_widget_solutions.html
+++ b/Source/HTML/Pages/Products/sage_one/content_widgets/ux2_content_widget_solutions.html
@@ -9,7 +9,7 @@
                 <p class="h5">Choose a solution to get started</p>
             </div>
 
-            <div class="filter-module-content">
+            <div class="filter-module-content" data-sticky-header-autoclose="SageOneStart">
                 <div class="filter-module-results indent-top-xs">
                     <div class="filter-module-results-list">
                         <div class="product-panel" data-mob-prod-id="sage_one" data-filter-product-score="0" data-filter-attributes="option-1|option-2">
